# main.py
@@ -201,6 +201,52 @@ class Main(KytosNApp):
             log.error(exc_error)
             raise HTTPException(500, detail=exc_error)
 
+    @rest("v1/evc/expected_flows", methods=["POST"])
+    async def evc_expected_flows(self, request: Request) -> JSONResponse:
+        """List expected flows for given INT EVCs."""
+        await avalidate_openapi_request(self.spec, request)
+        try:
+            content = await aget_json_or_400(request)
+            evc_ids = content["evc_ids"]
+        except (TypeError, KeyError):
+            raise HTTPException(400, detail=f"Invalid payload: {content}")
+
+        try:
+            evcs = (
+                await api.get_evcs()
+                if len(evc_ids) != 1
+                else await api.get_evc(evc_ids[0])
+            )
+        except RetryError as exc:
+            exc_error = str(exc.last_attempt.exception())
+            log.error(exc_error)
+            raise HTTPException(503, detail=exc_error)
+        except UnrecoverableError as exc:
+            exc_error = str(exc)
+            log.error(exc_error)
+            raise HTTPException(500, detail=exc_error)
+
+        if evc_ids:
+            evcs = {evc_id: evcs.get(evc_id, {}) for evc_id in evc_ids}
+        else:
+            evcs = {k: v for k, v in evcs.items() if utils.has_int_enabled(v)}
+            if not evcs:
+                return JSONResponse({})
+
+        try:
+            int_flows = await self.int_manager.list_expected_flows(evcs)
+            return JSONResponse(int_flows)
+        except (EVCNotFound, FlowsNotFound, ProxyPortNotFound) as exc:
+            raise HTTPException(404, detail=str(exc))
+        except RetryError as exc:
+            exc_error = str(exc.last_attempt.exception())
+            log.error(exc_error)
+            raise HTTPException(503, detail=exc_error)
+        except UnrecoverableError as exc:
+            exc_error = str(exc)
+            log.error(exc_error)
+            raise HTTPException(500, detail=exc_error)
+
     @rest("v1/evc/redeploy", methods=["PATCH"])
     async def redeploy_telemetry(self, request: Request) -> JSONResponse:
         """REST to redeploy INT on EVCs.
